--- a/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
+++ b/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
@@ -13,23 +13,23 @@
                     </div>
                 </div>
                 <div class="box-body querybox">
-                    <div class="col-md-12 cs-select-group">
-                        <label>
-                            姓名匹配
-                        </label>
+                    <!--<div class="col-md-12 cs-select-group">-->
+                    <!--<label>-->
+                    <!--姓名匹配-->
+                    <!--</label>-->
 
-                        <div>
-                            <input class="easyui-combotree" itemId="planCodeInfo"/>
-                        </div>
-                    </div>
+                    <!--<div>-->
+                    <!--<input class="easyui-combotree" itemId="planCodeInfo"/>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <div class="col-md-12 cs-select-group">
                         <label>
                             注册日期
                         </label>
 
                         <div>
-                            <input class="easyui-datebox" data-options="require:'true' ,showSeconds:'true'"
-                                   itemId="planStartTime"/>
+                            <input class="easyui-datetimebox" data-options="require:'true' ,showSeconds:'true'"
+                                   itemId="startTime"/>
                         </div>
                     </div>
                     <div class="col-md-12 cs-select-group">
@@ -38,8 +38,8 @@
                         </label>
 
                         <div>
-                            <input class="easyui-datebox" data-options="require:'true' ,showSeconds:'true'"
-                                   itemId="planEndTime"/>
+                            <input class="easyui-datetimebox" data-options="require:'true' ,showSeconds:'true'"
+                                   itemId="endTime"/>
                         </div>
                     </div>
 
