--- a/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/filemanage/filemanage.html
+++ b/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/filemanage/filemanage.html
@@ -14,34 +14,23 @@
                 <div class="box-body querybox">
                     <div class="col-md-12 cs-select-group">
                         <label>
-                            姓名匹配
+                            论坛版块
                         </label>
 
                         <div>
-                            <input class="easyui-combotree" itemId="planCodeInfo"/>
+                            <input class="easyui-combobox" itemId="selectFileType"/>
                         </div>
                     </div>
-                    <div class="col-md-12 cs-select-group">
-                        <label>
-                            注册日期
-                        </label>
+                    <!--<div class="col-md-12 cs-select-group">-->
+                        <!--<label>-->
+                            <!--注册日期-->
+                        <!--</label>-->
 
-                        <div>
-                            <input class="easyui-datebox" data-options="require:'true' ,showSeconds:'true'"
-                                   itemId="planStartTime"/>
-                        </div>
-                    </div>
-                    <div class="col-md-12 cs-select-group">
-                        <label>
-                            至
-                        </label>
-
-                        <div>
-                            <input class="easyui-datebox" data-options="require:'true' ,showSeconds:'true'"
-                                   itemId="planEndTime"/>
-                        </div>
-                    </div>
-
+                        <!--<div>-->
+                            <!--<input class="easyui-datebox" data-options="require:'true' ,showSeconds:'true'"-->
+                                   <!--itemId="planStartTime"/>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
                     <div class="col-md-12 cs-select-group">
                         <a class="btn btn-info btn-block margin-bottom" itemId="plantselect_searchbtn"><i
