--- a/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/filemanage/filemanage.html
+++ b/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/filemanage/filemanage.html
@@ -35,8 +35,8 @@
                     <div class="col-md-12 cs-select-group">
                         <a class="btn btn-info btn-block margin-bottom" itemId="plantselect_searchbtn"><i
                                 class="fa fa-fw fa-search"></i>查询</a>
-                        <a class="btn btn-success btn-block margin-bottom" itemId="plantselect_downloadbtn"><i
-                                class="fa fa-fw fa-search"></i>下载当前页的所有文档</a>
+                        <a class="btn btn-success btn-block margin-bottom" href="/file/download.action"><i
+                                class="fa fa-fw fa-search"></i>下载所有文档</a>
                     </div>
                 </div>
                 <!-- /.box-body -->
