--- a/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
+++ b/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
@@ -48,6 +48,10 @@
                         <a class="btn btn-info btn-block margin-bottom" itemId="plantselect_searchbtn"><i
                                 class="fa fa-fw fa-search"></i>查询</a>
                     </div>
+                    <div class="col-md-12 cs-select-group">
+                        <a class="btn btn-success btn-block margin-bottom" href="/user/export.action"><i
+                                class="fa fa-fw fa-search"></i>查询</a>
+                    </div>
                 </div>
                 <!-- /.box-body -->
             </div>
