--- a/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
+++ b/fastwebservice/browser-provider/src/main/webapp/WEB-INF/templates/userquery/userquery.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-md-12 cs-select-group">
                         <a class="btn btn-success btn-block margin-bottom" href="/user/export.action"><i
-                                class="fa fa-fw fa-search"></i>查询</a>
+                                class="fa fa-fw fa-glass"></i>导出</a>
                     </div>
                 </div>
                 <!-- /.box-body -->
